test/must_fail/unexpected_asterisk.ref
error: SyntaxError: Unexpected token '*'
  [./unexpected_asterisk.ngjs:0:0] in ???()
    var a = *diode();
            ^

warn: not compiled!
exit(2)
